[f-app-redux]- Add: ReduxSlice: SearchLocation and Export to store

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,9 @@
     "import/no-unresolved": "off",
     "no-shadow": "off",
     "react/prop-types": "off",
-    "no-param-reassign": 0
+    "no-param-reassign": 0,
+    "import/prefer-default-export":"off",
+    "implicit-arrow-linebreak":"off"
   },
   "ignorePatterns": [
     "dist/",
