--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.9.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
