--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "react-time-ago": "^7.2.1",
     "web-vitals": "^2.1.4"
   },
